<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlideShowMaker">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/title_select_video"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/img_choose_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_add_photo_alternate_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/img_choose_audio"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_choose_image" />

    <ImageView
        android:id="@+id/img_choose_audio"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_library_music_black_24dp"
        android:text="@string/text_choose_audio"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/img_choose_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_choose_image" />

    <ImageView
        android:id="@+id/img_pause_audio"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:src="@drawable/ic_pause_black_24dp"
        app:layout_constraintRight_toLeftOf="@id/tv_audio_title"
        app:layout_constraintTop_toBottomOf="@id/recyclerview" />

    <ImageView
        android:id="@+id/img_play_audio"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintRight_toLeftOf="@id/tv_audio_title"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"/>
    <TextView
        android:id="@+id/tv_audio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_pause_audio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_pause_audio" />
    <Button
        android:id="@+id/btn_make_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_make_video"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_audio_title" />
</androidx.constraintlayout.widget.ConstraintLayout>